# Provenance

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: streamlit_app.py
eval/: _ragas_compat.py  dataset.py  run_eval.py
src/provenance/: __init__.py  config.py  pipeline.py
src/provenance/agents/: __init__.py  citation_verification.py  filter.py  search.py  synthesis.py
src/provenance/api/: main.py
src/provenance/clients/: __init__.py  arxiv.py  llm.py  semantic_scholar.py
src/provenance/models/: __init__.py  schemas.py
src/provenance/storage/: __init__.py  db.py  orm.py  repository.py
tests/: conftest.py  test_api.py  test_arxiv_client.py  test_citation_verification_agent.py  test_filter_agent.py  test_pipeline.py  test_search_agent.py  test_semantic_scholar_client.py  test_storage.py  test_synthesis_agent.py
